<resources>
    <string name="app_name">GreenChat</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registrasi">Registrasi</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="login">Login</string>
    <string name="select_photo">Select Photo</string>
    <string name="signout">Signout</string>
    <string name="message">Message</string>
    <string name="masukan_chat">Masukan Chat</string>
    <string name="kirim">Kirim</string>
    <string name="chat">Chat</string>
</resources>