<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    tools:context=".ui.activity.LoginActivity">

    <EditText
        android:id="@+id/edUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@android:color/white"
        android:inputType="textPersonName"
        android:padding="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@android:color/white"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/edUsername"
        app:layout_constraintLeft_toLeftOf="@id/edUsername"
        app:layout_constraintRight_toRightOf="@id/edUsername"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edPassword"
        app:layout_constraintLeft_toLeftOf="@id/edPassword"
        app:layout_constraintRight_toRightOf="@id/edPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>