<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@android:color/holo_green_light"
    tools:context=".ui.activity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/imgPhoto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/image_button"
                android:text="@string/select_photo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgPhoto2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="@id/imgPhoto"
                app:layout_constraintLeft_toLeftOf="@id/imgPhoto"
                app:layout_constraintRight_toRightOf="@id/imgPhoto"
                app:layout_constraintBottom_toBottomOf="@id/imgPhoto"/>

            <EditText
                android:id="@+id/edUsername"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="8dp"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgPhoto" />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintLeft_toLeftOf="@id/edUsername"
                app:layout_constraintRight_toRightOf="@id/edUsername"
                app:layout_constraintTop_toBottomOf="@id/edUsername" />

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/rounded_edittext"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/edEmail"
                app:layout_constraintLeft_toLeftOf="@id/edEmail"
                app:layout_constraintRight_toRightOf="@id/edEmail"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/registrasi"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_button"
                app:layout_constraintTop_toBottomOf="@id/edPassword"
                app:layout_constraintLeft_toLeftOf="@id/edPassword"
                app:layout_constraintRight_toRightOf="@id/edPassword"/>

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@android:color/white"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/btnRegister"
                app:layout_constraintLeft_toLeftOf="@id/btnRegister"
                app:layout_constraintRight_toRightOf="@id/btnRegister"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>